--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Stanley Cen</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'/>
 		<link href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.3/normalize.min.css" rel="stylesheet" type="text/css"/>
 		<link href="/main.css" rel="stylesheet" type="text/css"/>
@@ -51,57 +51,38 @@
 					<div class="row">
 						<div class="left">
 							<div class="wrapper">
-								<div class="timeline">
-									<div class="event">
-										<span class="date">
-											3<sup>rd</sup> grade
-										</span>
-										<span class="circle"></span>
-										<span class="bar"></span>
-										<span class="label">
-											Started programming in C
-										</span>
-									</div>
-									<div class="event">
-										<span class="date">
-											10<sup>th</sup> grade
-										</span>
-										<span class="circle"></span>
-										<span class="bar"></span>
-										<span class="label">
-											USA Computing Olympiad Finalist
-										</span>
-									</div>
-									<div class="event">
-										<span class="date">
-											11<sup>th</sup> grade
-										</span>
-										<span class="circle"></span>
-										<span class="bar"></span>
-										<span class="label">
-											USA Computing Olympiad Finalist
-										</span>
-									</div>
-									<div class="event">
-										<span class="date">
-										</span>
-										<span class="circle"></span>
-										<span class="bar"></span>
-										<span class="label">
-											Research Science Institute Scholar
-										</span>
-									</div>
-								<!-- 	<div class="event">
-										<span class="date">
-											12<sup>th</sup> grade
-										</span>
-										<span class="circle"></span>
-										<span class="bar"></span>
-										<span class="label">
-											#yolo
-										</span>
-									</div> -->
-								</div>
+								<ul class="timeline">
+									<li>
+										<time>
+											<span>
+												11<sup>th</sup> grade
+											</span>
+											<span>
+												May '13
+											</span>
+										</time>
+										<div class="waypoint"></div>
+										<div class="label">
+											<h2>USACO</h2>
+											<p>Test test test</p>
+										</div>
+									</li>
+									<li>
+										<time>
+											<span>
+												11<sup>th</sup> grade
+											</span>
+											<span>
+												May '13
+											</span>
+										</time>
+										<div class="waypoint"></div>
+										<div class="label">
+											<h2>USACO</h2>
+											<p>Test test test</p>
+										</div>
+									</li>
+								</ul>
 							</div>
 						</div>
 						<div class="right">
