Add mobile navigation

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,6 +13,9 @@
 	</head>
 	<body>
 		<header id="header">
+			<a class="navicon-button">
+				<div class="navicon"></div>
+			</a>
 			<h1><a href="/">stanley cen</a></h1>
 			<nav>
 				<a href="/blog" class="<%= get_nav_classes 'blog' %>">blog</a>
