Generalize parallax effect

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,7 +25,7 @@
 				<a href="#contact" class="<%= get_nav_classes 'contact' %>">contact</a>
 			</nav>
 		</header>
-		<section id="home">
+		<section id="home" class="parallax">
 			<div id="home-shoutout">
 				<div>
 					<h1><%= GREETINGS.sample %></h1>
@@ -47,7 +47,7 @@
 				</div>
 			</div> -->
 			<div id="about">
-				<div class="header">
+				<div class="header parallax">
 					<h1 class="header">About <span class="highlight">me</span></h1>
 				</div>
 				<div class="content">
@@ -97,7 +97,7 @@
 				</div>
 			</div>
 			<div id="contact">
-				<div class="header">
+				<div class="header parallax">
 					<h1 class="header">Contact <span class="highlight">me</span></h1>
 				</div>
 			</div>
