--- a/views/main.scss
+++ b/views/main.scss
@@ -267,14 +267,14 @@ $timeline_collapse_width: 46em;
     padding-top: 80px;
     padding-bottom: 80px;
     text-align: center;
-    background: url(/parallax.jpg);
+    background: url(/parallax1.jpg);
     background-repeat: no-repeat;
     background-position: center 0px;
     background-attachment: fixed;
     background-size: cover;
     h1.header {
       margin: 0 auto;
-      color: #2f2f2f;
+      color: #fff;
       font-weight: 300;
       font-size: 50px;
     }
